--- a/mini-ecs/build.gradle
+++ b/mini-ecs/build.gradle
@@ -1,16 +1,17 @@
 plugins {
-    id 'java'
-    id 'application'
+  id 'java'
+  id 'application'
+  id 'io.freefair.lombok' version '3.1.4'
 }
 
 repositories {
-    jcenter()
+  jcenter()
 }
 
 dependencies {
-    implementation 'com.google.guava:guava:27.0.1-jre'
+  implementation 'com.google.guava:guava:27.0.1-jre'
 
-    testImplementation 'junit:junit:4.12'
+  testImplementation 'junit:junit:4.12'
 }
 
 mainClassName = 'mini.ecs.GameContainer'
