--- a/fun-trip/build.gradle
+++ b/fun-trip/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'application'
-    id 'io.freefair.lombok' version '3.1.4'
 }
 
 group 'fun.trip'
@@ -17,4 +16,10 @@ dependencies {
     compile "net.onedaybeard.artemis:artemis-odb:2.2.0"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compile group: 'com.devskiller', name: 'jfairy', version: '0.6.2'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.8'
+
+    compileOnly 'org.projectlombok:lombok:1.18.6'
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
 }
