--- a/fun-trip/build.gradle
+++ b/fun-trip/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    compile "net.onedaybeard.artemis:artemis-odb:2.2.0"
+    compile 'net.onedaybeard.artemis:artemis-odb:2.2.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
